@@ -1,6 +1,8 @@
 Construo 0.2.1
 ==============
 
+ * fixed 'make install'
+
  * added grid support (press 'g')
 
  * fixes crash-bug in with user/ directory
